--- a/sort.css
+++ b/sort.css
@@ -140,3 +140,10 @@ u wanted the order of the cards to be changeable, you did this too urself, do yo
     grid-column: 1;
     --animation-order: 1;
 }
+.member:nth-of-type(20) {
+    /*blurryhallow*/
+    background-image: url(images/backgrounds/gibraltar.png);
+    grid-row: 6;
+    grid-column: 4;
+    --animation-order: 1;
+}
