--- a/sort.css
+++ b/sort.css
@@ -135,7 +135,7 @@ u wanted the order of the cards to be changeable, you did this too urself, do yo
 }
 .member:nth-of-type(19) {
     /*tacoman*/
-    background-image: url(images/backgrounds/gibraltar.png);
+    background-image: url(images/backgrounds/coolneighborhood.png);
     grid-row: 6;
     grid-column: 1;
     --animation-order: 1;
@@ -145,5 +145,68 @@ u wanted the order of the cards to be changeable, you did this too urself, do yo
     background-image: url(images/backgrounds/gibraltar.png);
     grid-row: 6;
     grid-column: 4;
+    --animation-order: 1;
+}
+.member:nth-of-type(21) {
+    /*brandonusa*/
+    background-image: url(images/backgrounds/gibraltar.png);
+    grid-row: 7;
+    grid-column: 1;
+    --animation-order: 1;
+}
+.member:nth-of-type(22) {
+    /*josamo*/
+    background-image: url(images/backgrounds/gibraltar.png);
+    grid-row: 7;
+    grid-column: 2;
+    --animation-order: 1;
+}
+.member:nth-of-type(23) {
+    /*genetic*/
+    background-image: url(images/backgrounds/ireland.png);
+    grid-row: 7;
+    grid-column: 3;
+    --animation-order: 1;
+}
+.member:nth-of-type(24) {
+    /*dairy*/
+    background-image: url(images/backgrounds/gibraltar.png);
+    grid-row: 7;
+    grid-column: 4;
+    --animation-order: 1;
+}
+.member:nth-of-type(25) {
+    /*nolan*/
+    background-image: url(images/backgrounds/gibraltar.png);
+    grid-row: 8;
+    grid-column: 1;
+    --animation-order: 1;
+}
+.member:nth-of-type(26) {
+    /*theeno*/
+    background-image: url(images/backgrounds/gibraltar.png);
+    grid-row: 8;
+    grid-column: 2;
+    --animation-order: 1;
+}
+.member:nth-of-type(27) {
+    /*blues*/
+    background-image: url(images/backgrounds/gibraltar.png);
+    grid-row: 8;
+    grid-column: 3;
+    --animation-order: 1;
+}
+.member:nth-of-type(28) {
+    /*damdan*/
+    background-image: url(images/backgrounds/gibraltar.png);
+    grid-row: 8;
+    grid-column: 4;
+    --animation-order: 1;
+}
+.member:nth-of-type(29) {
+    /*submadoge*/
+    background-image: url(images/backgrounds/gibraltar.png);
+    grid-row: 9;
+    grid-column: 1;
     --animation-order: 1;
 }
