--- a/css/sort.css
+++ b/css/sort.css
@@ -9,102 +9,116 @@ u wanted the order of the cards to be changeable, you did this too urself, do yo
 
 .member:nth-of-type(1) {
     /*kof*/
-    background-image: url(images/backgrounds/carthage.png);
+    background-image: url(../images/backgrounds/carthage.png);
     grid-row: 1;
     grid-column: 1;
     --animation-order: 1;
 }
+
 .member:nth-of-type(2) {
     /*thilman*/
-    background-image: url(images/backgrounds/carthage.png);
+    background-image: url(../images/backgrounds/carthage.png);
     grid-row: 1;
     grid-column: 2;
     --animation-order: 1;
 }
+
 .member:nth-of-type(3) {
     /*debuggyo*/
-    background-image: url(images/backgrounds/carthage.png);
+    background-image: url(../images/backgrounds/carthage.png);
     grid-row: 1;
     grid-column: 3;
     --animation-order: 1;
 }
+
 .member:nth-of-type(4) {
     /*ovack*/
-    background-image: url(images/backgrounds/carthage.png);
+    background-image: url(../images/backgrounds/carthage.png);
     grid-row: 1;
     grid-column: 4;
     --animation-order: 1;
 }
+
 .member:nth-of-type(5) {
     /*sax*/
-    background-image: url(images/backgrounds/saxboylafranks.png);
+    background-image: url(../images/backgrounds/saxboylafranks.png);
     grid-row: 2;
     grid-column: 3;
     --animation-order: 1;
 }
+
 .member:nth-of-type(6) {
     /*tac*/
-    background-image: url(images/backgrounds/carthage.png);
+    background-image: url(../images/backgrounds/carthage.png);
     grid-row: 2;
     grid-column: 1;
     --animation-order: 1;
 }
+
 .member:nth-of-type(7) {
     /*mlg*/
-    background-image: url(images/backgrounds/mlgepiccar.png);
+    background-image: url(../images/backgrounds/mlgepiccar.png);
     grid-row: 6;
     grid-column: 2;
     --animation-order: 1;
 }
+
 .member:nth-of-type(8) {
     /*pie*/
-    background-image: url(images/backgrounds/coolneighborhood.png);
+    background-image: url(../images/backgrounds/coolneighborhood.png);
     grid-row: 4;
     grid-column: 1;
     --animation-order: 1;
 }
+
 .member:nth-of-type(9) {
     /*ges*/
-    background-image: url(images/backgrounds/gestalten.png);
+    background-image: url(../images/backgrounds/gestalten.png);
     grid-row: 3;
     grid-column: 1;
     --animation-order: 1;
 }
+
 .member:nth-of-type(10) {
     /*lys*/
-    background-image: url(images/backgrounds/ckla.webp);
+    background-image: url(../images/backgrounds/ckla.webp);
     grid-row: 3;
     grid-column: 2;
     --animation-order: 1;
 }
+
 .member:nth-of-type(11) {
     /*tangmar*/
-    background-image: url(images/backgrounds/tangymar.png);
+    background-image: url(../images/backgrounds/tangymar.png);
     grid-row: 3;
     grid-column: 3;
     --animation-order: 1;
 }
+
 .member:nth-of-type(12) {
     /*colusius my glourious queen that i love so much*/
-    background-image: url(images/backgrounds/colusius.png);
+    background-image: url(../images/backgrounds/colusius.png);
     grid-row: 6;
     grid-column: 3;
     --animation-order: 1;
 }
+
 .member:nth-of-type(13) {
     /*hatrick*/
-    background-image: url(images/backgrounds/ireland.png);
+    background-image: url(../images/backgrounds/ireland.png);
     grid-row: 2;
     grid-column: 4;
     --animation-order: 1;
 }
+
 .member:nth-of-type(14) {
     /*icy*/
-    background-image: url(images/backgrounds/ireland.png);
+    background-image: url(../images/backgrounds/ireland.png);
     grid-row: 2;
     grid-column: 2;
     --animation-order: 1;
 }
+
 .member:nth-of-type(15) {
     /*pherno*/
     background-image: url(images/backgrounds/coolneighborhood.png);
@@ -112,6 +126,7 @@ u wanted the order of the cards to be changeable, you did this too urself, do yo
     grid-column: 4;
     --animation-order: 1;
 }
+
 .member:nth-of-type(16) {
     /*chezburger*/
     background-image: url(images/backgrounds/gibraltar.png);
@@ -119,6 +134,7 @@ u wanted the order of the cards to be changeable, you did this too urself, do yo
     grid-column: 2;
     --animation-order: 1;
 }
+
 .member:nth-of-type(17) {
     /*tit*/
     background-image: url(images/backgrounds/gibraltar.png);
@@ -126,6 +142,7 @@ u wanted the order of the cards to be changeable, you did this too urself, do yo
     grid-column: 3;
     --animation-order: 1;
 }
+
 .member:nth-of-type(18) {
     /*taigus*/
     background-image: url(images/backgrounds/gibraltar.png);
@@ -133,6 +150,7 @@ u wanted the order of the cards to be changeable, you did this too urself, do yo
     grid-column: 4;
     --animation-order: 1;
 }
+
 .member:nth-of-type(19) {
     /*tacoman*/
     background-image: url(images/backgrounds/coolneighborhood.png);
@@ -140,6 +158,7 @@ u wanted the order of the cards to be changeable, you did this too urself, do yo
     grid-column: 1;
     --animation-order: 1;
 }
+
 .member:nth-of-type(20) {
     /*blurryhallow*/
     background-image: url(images/backgrounds/gibraltar.png);
@@ -147,6 +166,7 @@ u wanted the order of the cards to be changeable, you did this too urself, do yo
     grid-column: 4;
     --animation-order: 1;
 }
+
 .member:nth-of-type(21) {
     /*brandonusa*/
     background-image: url(images/backgrounds/gibraltar.png);
@@ -154,6 +174,7 @@ u wanted the order of the cards to be changeable, you did this too urself, do yo
     grid-column: 1;
     --animation-order: 1;
 }
+
 .member:nth-of-type(22) {
     /*josamo*/
     background-image: url(images/backgrounds/gibraltar.png);
@@ -161,6 +182,7 @@ u wanted the order of the cards to be changeable, you did this too urself, do yo
     grid-column: 2;
     --animation-order: 1;
 }
+
 .member:nth-of-type(23) {
     /*genetic*/
     background-image: url(images/backgrounds/ireland.png);
@@ -168,6 +190,7 @@ u wanted the order of the cards to be changeable, you did this too urself, do yo
     grid-column: 3;
     --animation-order: 1;
 }
+
 .member:nth-of-type(24) {
     /*dairy*/
     background-image: url(images/backgrounds/gibraltar.png);
@@ -175,6 +198,7 @@ u wanted the order of the cards to be changeable, you did this too urself, do yo
     grid-column: 4;
     --animation-order: 1;
 }
+
 .member:nth-of-type(25) {
     /*nolan*/
     background-image: url(images/backgrounds/gibraltar.png);
@@ -182,6 +206,7 @@ u wanted the order of the cards to be changeable, you did this too urself, do yo
     grid-column: 1;
     --animation-order: 1;
 }
+
 .member:nth-of-type(26) {
     /*theeno*/
     background-image: url(images/backgrounds/gibraltar.png);
@@ -189,6 +214,7 @@ u wanted the order of the cards to be changeable, you did this too urself, do yo
     grid-column: 2;
     --animation-order: 1;
 }
+
 .member:nth-of-type(27) {
     /*blues*/
     background-image: url(images/backgrounds/gibraltar.png);
@@ -196,6 +222,7 @@ u wanted the order of the cards to be changeable, you did this too urself, do yo
     grid-column: 3;
     --animation-order: 1;
 }
+
 .member:nth-of-type(28) {
     /*damdan*/
     background-image: url(images/backgrounds/gibraltar.png);
@@ -203,6 +230,7 @@ u wanted the order of the cards to be changeable, you did this too urself, do yo
     grid-column: 4;
     --animation-order: 1;
 }
+
 .member:nth-of-type(29) {
     /*submadoge*/
     background-image: url(images/backgrounds/gibraltar.png);
