--- a/css/members.css
+++ b/css/members.css
@@ -17,6 +17,7 @@
 }
 
 .member {
+    z-index: 1;
     margin-top: 5px;
     padding: 0px 15px;
     border-radius: 30px;
@@ -44,11 +45,12 @@
 }
 
 .memberinfo p {
+    z-index: 1;
     margin-block: 0;
     padding-left: 20px;
 }
 
-.memberinfo img {
+.memberinfo .img {
     image-rendering: pixelated;
     border-radius: 5px;
 }
@@ -76,3 +78,11 @@
     }
 }
 
+.icon {
+    opacity: 50%;
+    width: 120px;
+    position: absolute;
+    margin: 0;
+    transform: translateX(140%) translateY(-50%) translateZ(0);
+    z-index: 0;
+}
