--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html, body {
 }
 
 .header {
-    background-color: transparent;
+    background-color: #171717;
     height: 35px;
     padding: 15px 20px;
     display: flex;
@@ -17,6 +17,12 @@ html, body {
     align-items: center;
     justify-content: center;
     margin-bottom: -15px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    margin-left: -20px;
+    margin-right: -20px;
+    z-index: 2;
 }
 
 .header img:hover {
@@ -24,6 +30,7 @@ html, body {
 }
 
 .container {
+    padding-top: 55px;
     margin: -8px;
     display: flex;
     flex-direction: column;
