--- a/css/members.css
+++ b/css/members.css
@@ -21,8 +21,8 @@
     border-radius: 30px;
     display: flex;
     align-items: center;
-    background-position: center;
-    background-size: cover;
+    background-position: calc(100% - 25px) 50%, center, center;
+    background-size: 120px, cover, cover;
     background-repeat: no-repeat;
     box-shadow: 0px 0px 10px 2px rgba(255, 255, 255, 0.2) inset,
     0 8px 20px 0 #00000083;
@@ -35,6 +35,7 @@
 
 .player-skin {
     padding: 1em 0;
+    padding-left: 0.5em;
 }
 
 .member:hover {
@@ -85,5 +86,5 @@
     width: 120px;
     margin: 0;
     z-index: 0;
-    margin-left: auto;
+    display: absolute;
 }
