--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html, body {
 }
 
 .header {
-    background-color: #171717;
+    background-image: linear-gradient(#171717f5, #171717ab 80%, #17171700);
     height: 35px;
     padding: 15px 20px;
     display: flex;
@@ -19,9 +19,7 @@ html, body {
     margin-bottom: -15px;
     position: fixed;
     top: 0;
-    width: 100%;
-    margin-left: -20px;
-    margin-right: -20px;
+    width: calc(100vw - 60px);
     z-index: 2;
 }
 
@@ -36,32 +34,6 @@ html, body {
     flex-direction: column;
 }
 
-.header a {
-    margin-left: 10px;
-    padding: 8px 15px;
-    border-radius: 2rem;
-    background-color: transparent;
-    border: 2px solid #E1B35122;
-    transition: 200ms cubic-bezier(0.19, 1, 0.22, 1);
-    color: #FEFBFB;
-    text-decoration: none;
-    text-align: center;
-    margin-left: auto;
-}
-
-
-.logo {
-    margin-right: 10px;
-}
-
-.header a.currentpage {
-    background-color: #E1B351;
-    border: 2px solid #FFFFFF44;
-    box-shadow: 0px 5px 20px #E1B35188;
-    color: black;
-    font-weight: 700;
-}
-
 .content {
     color: white;
     padding: 15px;
@@ -71,16 +43,18 @@ html, body {
 }
 
 button, select {
-    background-color: #333333;
-    border: none;
-    border-radius: 10px;
+    background-color: #ffffff20;
+    border: 1px solid #ffffff20;
+    border-radius: 20px;
     padding: 5px 10px;
     margin-left: 2px;
     color: white;
+    font-family: Figtree;
+    backdrop-filter: blur(10px);
 }
 
 button:hover, select:hover {
-    background-color: #464646;
+    background-color: #ffffff30;
     cursor: pointer;
 }
 
@@ -89,7 +63,6 @@ button:hover, select:hover {
 }
 
 #sort-display {
-    background-color: #222222;
     border-radius: 10px;
     color: white;
     padding: 5px 10px;
@@ -97,4 +70,10 @@ button:hover, select:hover {
 
 #sort-display label {
     font-weight: 800;
+}
+
+@media screen and (max-width: 650px) {   
+    #sort-display label {
+        display: none;
+    }
 }
