--- a/css/members.css
+++ b/css/members.css
@@ -26,7 +26,7 @@
     background-repeat: no-repeat;
     box-shadow: 0px 0px 10px 2px rgba(255, 255, 255, 0.2) inset,
     0 8px 20px 0 #00000083;
-    animation-name: goup;
+    animation-name: go-up;
     animation-duration: 1s;
     animation-delay: calc(var(--animation-order) * 75ms);
     animation-fill-mode: backwards;
