fix animations part 2

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@keyframes group {
+@keyframes go-up {
     0% {transform:translateY(10px); opacity:0;}
     100% {transform:translateY(0); opacity:1;}
 }
