--- a/css/style.css
+++ b/css/style.css
@@ -58,10 +58,6 @@ button:hover, select:hover {
     cursor: pointer;
 }
 
-.title {
-    margin-right: auto;
-}
-
 #sort-display {
     border-radius: 10px;
     color: white;
@@ -76,4 +72,24 @@ button:hover, select:hover {
     #sort-display label {
         display: none;
     }
+}
+
+.title {
+    margin-right: auto;
+    text-align: center;
+    color: #929292;
+    font-weight: 700;
+    font-size: 18pt;
+    transition: 1s;
+    text-wrap: nowrap;
+}
+
+h1, a {
+    padding-right: 1em;
+    color: inherit;
+    text-decoration: none;
+}
+
+.active {
+    color: #ffffff;
 }
