--- a/css/war-log.css
+++ b/css/war-log.css
@@ -34,20 +34,18 @@
 
 .team1 {
     text-align: left;
-    /* hey debuggy make this go to the left */
 }
 
 .team2 {
-    text-align: right;
+    text-align: left;
     margin-left: auto;
-    /* hey debuggy make this go to the right */
 }
 
 .nation {
     font-weight: 800;
     font-size: 18pt;
     margin-bottom: -5px;
-    margin-top: 35px;
+    display: inline-block;
 }
 
 .town {
@@ -62,4 +60,8 @@
 .header {
     padding: 15px 20px;
     height: 35px;
+}
+
+.flag {
+    height: 18pt;
 }
