fix mobile css again
brandon forgot to change the other #sort-display

--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ footer {
     .title {
         margin-right: 0;
     }
-    #sort-display {
+    #sort-options {
         margin-left: -10px;
         margin-top: -10px;
         margin-right: auto;
